syntax = "proto3";

option go_package = "github.com/mcfe91/go-cli-grpc-chat/api";

package api;

service Broadcast {
    rpc CreateStream(Connect) returns (stream Message);
    rpc BroadcastMessage(Message) returns (Close);
}

message User {
    string id = 1;
    string display_name = 2;
};

message Message {
    string id = 1;
    User user = 2;
    string message = 3;
    string timestamp = 4;
}

message Connect {
    User user = 1 ;
    bool active = 2;
    repeated string chattingWith = 3;
}

message Close{}